print: handle rounded borders correctly with multiple pages
When the `<div id="main">`, which has rounded borders, is broken apart
because the content does not fit onto a single page, the rounded borders
were cut off at page breaks. Let's just close them, so that each page
gets its own box with rounded borders.

--- a/assets/sass/print.scss
+++ b/assets/sass/print.scss
@@ -25,4 +25,8 @@
   section {
     break-inside: avoid-page;
   }
+
+  div#main {
+    box-decoration-break: clone;
+  }
 }
